updated swagger.json and added forgot password
